# intellisupport-ai

./: .env  .env.example  .gitignore  main.py  pyproject.toml  quick_test.py  test_api_simple.py  test_api_working.py  test_chain.py  test_chain_simple.py  test_email_classifier.py  test_email_classifier_mock.py  test_encoding.py  test_env.py  test_my_chain.py  test_openrouter.py
src/intellisupport/: __init__.py  config.py
src/intellisupport/chains/: __init__.py  basic_support.py
src/intellisupport/tools/: __init__.py  email_classifier.py
src/intellisupport/utils/: exceptions.py  logger.py
src/intellisupport_ai/: __init__.py
